# nuvie-db

./: .env-sample  .gitignore  Makefile  pyproject.toml
alembic/: README  env.py
alembic/versions/: 659af050daab_removing_unused_fields.py  f654adfab2c1_uploading_project_structure.py
scripts/: apply_migrations.sh  make_migrations.sh
src/nuvie_db/: __init__.py
src/nuvie_db/core/: constants.py
src/nuvie_db/nuvie/: __init__.py  metadata.py
src/nuvie_db/nuvie/core/: __init__.py
src/nuvie_db/nuvie/dto/: __init__.py
src/nuvie_db/nuvie/models/: patient.py  user.py
