[project]
name = "nuvie-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rhuan Fernandes", email = "rfcf10@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg>=3.2.9",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "alembic>=1.16.1",
]


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
